add dark/light themes

--- a/src/Header/Header.module.scss
+++ b/src/Header/Header.module.scss
@@ -1,15 +1,27 @@
-.header {
-  min-height: 60px;
+@import 'src/common/styles/sass/variables';
+@import 'src/common/styles/sass/mixins';
 
+.header {
+  min-height: 10vh;
   display: flex;
   justify-content: flex-end;
+  background-color: $primaryColor;
+  .home_icon {
+    margin-right: 30px;
+    width: 35px;
+  }
+  .theme_icon {
+    margin-right: 30px;
+    width: 30px;
+  }
+
 }
 
-.home_icon {
-  margin-right: 30px;
-  width: 35px;
+.light {
+  background-color: $secondaryColor;
 }
-.dark_theme_icon {
-  margin-right: 30px;
-  width: 30px;
+
+.dark {
+  background-color: $primaryColor;
+  fill: $secondaryColor
 }
