--- a/src/Stopwatch/Display/Display.module.scss
+++ b/src/Stopwatch/Display/Display.module.scss
@@ -7,9 +7,21 @@
     width: 70px;
     text-align: center;
     font-size: 30px;
-
-    color: $secondaryColor;
-    background-color: $primaryColor;
     border-radius: 10%;
 
+    &.light {
+        color: $secondaryColor;
+        background-color: $primaryColor;
+    }
+
+    &.dark {
+        color: $primaryColor;
+        background-color: $secondaryColor;
+    }
+}
+
+.separator {
+    &.dark {
+        color: $secondaryColor;
+    }
 }
